fix body and sidepanel overflow
fix note mouseover

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -18,7 +18,6 @@
 
 body {
     padding-top: 50px;
-    overflow-y:hidden;
 }
 
 nav.navbar{
@@ -91,7 +90,9 @@ ul{
         .glyphicon{
             transition-duration:.35s;
         }
-
+        .contentWrapper{
+            overflow-x:auto;
+        }
         .content{
             padding:10px 10px 10px 10px;
             overflow-x:hidden;
